#963535 : Add filter articles